More work on SIP section

--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -30,6 +30,7 @@
 @import 'layout/ides';
 @import 'layout/nutshell';
 @import 'layout/overviews';
+@import 'layout/sips';
 @import 'layout/toc';
 @import 'layout/glossary';
 @import 'layout/style-guide';
