Sidebar for SIP index pages

--- a/_layouts/sips.html
+++ b/_layouts/sips.html
@@ -13,7 +13,33 @@ layout: inner-page-parent-dropdown
 		<!-- TOC -->
     <div class="content-nav">
     	<div class="inner-box sidebar-toc-wrapper sip-toc" style="">
-        Nothing yet.
+        <h5 class="contents" style="line-height: 1.1; margin-bottom: 18px;">Scala Improvement Proposals (SIPs)</h5>
+          <div style="text-align: center; margin-bottom: 24px;">
+            <a href="{{ site.baseurl }}/sips/all.html" class="button">View all SIPs</a>
+          </div>
+        <h5 class="contents" style="margin-bottom: 0;">SIP Meetings</h5>
+        <div id="sip-meetings">
+          <div id="upcoming-meeting">
+            <h6>Next meeting:</h6>
+            <div id="meeting-title">&nbsp;&nbsp;<span class="tag" style="background-color: #dc322f; top: 0px; margin-bottom: 6px;">Live</span></div>
+            <div id="meeting-time"></div>
+            <div id="live-on-youtube">
+              Tune in and join us, live! Ask the SIP committee questions, weigh in, or just follow along.
+              <br><a id="watch-meeting">Watch →</a>
+            </div>
+          </div>
+          <div id="meeting-minutes">
+            <ul>
+              <li><a href="{{ site.baseurl }}/sips/minutes.html">Meeting Minutes</a></li>
+              <li><a href="https://www.youtube.com/channel/UCn_8OeZlf5S6sqCqntAvaIw/videos?view=2&sort=dd&shelf_id=1&live_view=502">All Upcoming SIP Meetings</a></li>
+            </ul>
+          </div>
+        </div>
+        <h5 class="contents" style="margin-bottom: 0;">Writing a SIP</h5>
+        <ul>
+          <li><a href="{{ site.baseurl }}/sips/sip-submission.html">Submitting a SIP</a></li>
+          <li><a href="{{ site.baseurl }}/sips/sip-tutorial.html">Tutorial: Writing a SIP</a></li>
+        </ul>
     		<div class="help-us"><a href="/contribute/documentation/#updating-scala-langorg">Problem with this page?<br> Please help us fix it!</a></div>
     	</div>
     </div>
