--- a/_sass/layout/sips.scss
+++ b/_sass/layout/sips.scss
@@ -22,6 +22,83 @@
     margin-bottom: 24px;
     font-style: italic;
   }
+
+  ul {
+    margin-bottom: 18px;
+    li {
+      margin-top: 6px;
+      a {
+        color: $headings-font-color;
+        // font-weight: $font-black;
+        &:hover {
+          color: $hover-link-color;
+          text-decoration: none;
+        }
+      }
+    }
+  }
+  #sip-meetings {
+    margin-bottom: 20px;
+  }
+
+  #live-on-youtube {
+    margin-top: 4px;
+    font-style: italic;
+    line-height: 1.1;
+    color: $headings-font-color;
+    font-size: $font-size-small;
+
+    #watch-meeting {
+      display: inline-block;
+      margin-top: 6px;
+      color: $brand-primary;
+    }
+  }
+
+  #meeting-minutes {
+    a {
+      color: $headings-font-color;
+      // font-weight: $font-black;
+      &:hover {
+        color: $hover-link-color;
+        text-decoration: none;
+      }
+    }
+  }
+
+  #meeting-time {
+    font-size: $font-size-xsmall;
+    text-transform: uppercase;
+    font-weight: $font-black;
+    color: $base-font-color-light;
+    margin-top: 0px;
+  }
+
+  #meeting-title {
+    a {
+      color: $headings-font-color;
+      font-weight: $font-black;
+      &:hover {
+        color: $hover-link-color;
+        text-decoration: none;
+      }
+    }
+  }
+
+  #upcoming-meeting {
+    margin-top: 10px;
+    padding: 8px;
+    padding-left: 10px;
+    padding-bottom: 14px;
+    background-color: rgba($brand-primary, 0.1);
+
+    h6 {
+      font-family: $heading-font-family;
+      color: $brand-primary;
+      font-size: $font-size-large;
+      font-weight: $font-regular;
+    }
+  }
 }
 
 .sips {
