--- a/_sass/layout/documentation.scss
+++ b/_sass/layout/documentation.scss
@@ -45,4 +45,15 @@
   ol {
     margin-bottom: 18px;
   }
+
+  .tag {
+    float: right;
+    top: 3px;
+    background: $brand-primary;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 11px;
+    font-weight: $font-bold;
+    padding: 1px 5px;
+  }
 }
