Image path tweaks

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,7 @@
       </div>
       <div class="site-footer-bottom">
         <p>{{site.data.common.copyrightText}}</p>
-        <img src="/resources/img/frontpage/scala-logo-white.png" alt="">
+        <img src="{{ site.baseurl }}/resources/img/frontpage/scala-logo-white.png" alt="">
       </div>
     </div>
   </footer>
