--- a/_includes/navbar-inner.html
+++ b/_includes/navbar-inner.html
@@ -2,7 +2,7 @@
   <div class="wrap">
     <nav class="navigation" role="menu">
       <a href="https://scala-lang.org" class="navigation-bdand">
-        <img src="/resources/img/frontpage/scala-logo-white@2x.png" alt="">
+        <img src="{{ site.baseurl }}/resources/img/frontpage/scala-logo-white@2x.png" alt="">
       </a>
       <div class="navigation-panel-button">
         <i class="fa fa-bars"></i>
@@ -21,7 +21,7 @@
   <div class="wrap" style="padding: 0px;">
     <nav class="doc-navigation" role="menu">
       <a href="{{ site.baseurl }}/" class="navigation-bdand">
-        <img src="/resources/img/documentation-logo@2x.png" alt="">
+        <img src="{{ site.baseurl }}/resources/img/documentation-logo@2x.png" alt="">
       </a>
       <div class="navigation-ellipsis">
         <i class="fa fa-ellipsis-v"></i>
