--- a/_layouts/downloadpage.html
+++ b/_layouts/downloadpage.html
@@ -19,7 +19,7 @@ layout: inner-page-parent
 				<h2>Compared to other programming languages, installing Scala is a bit unusual. It's possible to "install" Scala in numerous ways.</h2>
 				<div class="install-steps">
 					<div class="step">
-						<img src="/resources/img/download/arrow-asset.png" alt="">
+						<img src="{{ site.baseurl }}/resources/img/download/arrow-asset.png" alt="">
 						<div class="number-step">1</div>
 						<div class="text-step" id="download-step-one">
 							<h3>First, make sure you have the Java 8 JDK installed.</h3>
@@ -36,7 +36,7 @@ layout: inner-page-parent
 						<div class="download-intellij">
 							<span class="or">or</span>
 							<div class="description">
-								<img src="/resources/img/download/arrow-left.png" alt="">
+								<img src="{{ site.baseurl }}/resources/img/download/arrow-left.png" alt="">
 								<p>Best if you prefer a full-featured IDE (recommended for beginners)</p>
 							</div>
 							<a href="" class="btn-download" id="download-intellij-link">
@@ -49,7 +49,7 @@ layout: inner-page-parent
 						</div>
 						<div class="download-sbt">
 							<div class="description">
-								<img src="/resources/img/download/arrow-right.png" alt="">
+								<img src="{{ site.baseurl }}/resources/img/download/arrow-right.png" alt="">
 								<p>Best if you are familiar with the command line</p>
 							</div>
 							<a href="" class="btn-download" id="download-sbt-link">
