Fixing some broken links

--- a/_includes/headertop.html
+++ b/_includes/headertop.html
@@ -26,5 +26,5 @@
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script> -->
 
     <!-- Atom feeds -->
-    <link rel="alternate" type="application/atom+xml" title="News Feed" href="{{ site.baseurl }}/feed/index.xml" />
-    <link rel="alternate" type="application/atom+xml" title="Blog Feed" href="{{ site.baseurl }}/feed/blog.xml" />
+    <link rel="alternate" type="application/atom+xml" title="News Feed" href="http://scala-lang.org/feed/index.xml" />
+    <link rel="alternate" type="application/atom+xml" title="Blog Feed" href="http://scala-lang.org/feed/blog.xml" />
