--- a/_includes/sidebar-toc-glossary.html
+++ b/_includes/sidebar-toc-glossary.html
@@ -5,6 +5,6 @@
       <div id="toc"></div>
 		</div>
 		<hr>
-		<div class="help-us"><a href="/contribute/documentation/#updating-scala-langorg">Problem with this page?<br> Please help us fix it!</a></div>
+		<div class="help-us"><a href="https://github.com/scala/scala.github.com/blob/master/{{ page.relative_path }}"><i class="fa fa-pencil" aria-hidden="true"></i> Problem with this page?<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Please help us fix it!</a></div>
 	</div>
 </div>
