--- a/_includes/navbar-inner.html
+++ b/_includes/navbar-inner.html
@@ -1,7 +1,7 @@
 <header id="site-header">
   <div class="wrap">
     <nav class="navigation" role="menu">
-      <a href="https://scala-lang.org" class="navigation-bdand">
+      <a href="http://scala-lang.org" class="navigation-bdand">
         <img src="{{ site.baseurl }}/resources/img/frontpage/scala-logo-white@2x.png" alt="">
       </a>
       <div class="navigation-panel-button">
