--- a/_includes/sidebar-toc-singlepage-overview.html
+++ b/_includes/sidebar-toc-singlepage-overview.html
@@ -26,6 +26,6 @@
       {% endif %}
 		</div>
 		<hr>
-		<div class="help-us"><a href="https://github.com/scala/scala.github.com/blob/master/{{ page.relative_path }}"><i class="fa fa-pencil" aria-hidden="true"></i> Problem with this page?<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Please help us fix it!</a></div>
+		<div class="help-us"><a href="https://github.com/scala/docs.scala-lang/blob/master/{{ page.relative_path }}"><i class="fa fa-pencil" aria-hidden="true"></i> Problem with this page?<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Please help us fix it!</a></div>
 	</div>
 </div>
