--- a/_layouts/sip.html
+++ b/_layouts/sip.html
@@ -26,7 +26,7 @@ includeTOC: true
           <div id="toc"></div>
     		</div>
     		<hr>
-    		<div class="help-us"><a href="https://github.com/scala/scala.github.com/blob/master/{{ page.relative_path }}"><i class="fa fa-pencil" aria-hidden="true"></i> Problem with this page?<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Please help us fix it!</a></div>
+    		<div class="help-us"><a href="https://github.com/scala/docs.scala-lang/blob/master/{{ page.relative_path }}"><i class="fa fa-pencil" aria-hidden="true"></i> Problem with this page?<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Please help us fix it!</a></div>
     	</div>
     </div>
 
