Use base.url for '/' root relative links

--- a/_includes/books.html
+++ b/_includes/books.html
@@ -5,7 +5,7 @@
       <div class="book-item-header">
         <a href="{{book.link}}">
           <div class="content-img-boook">
-            <img src="{{book.image}}" alt="{{book.title}}">
+            <img src="{{site.baseurl}}{{book.image}}" alt="{{book.title}}">
           </div>
           <h3>{{book.title}}</h3>
         </a>
