--- a/_includes/navbar-inner.html
+++ b/_includes/navbar-inner.html
@@ -10,7 +10,7 @@
       <ul class="navigation-menu">
         {% for navItem in site.data.nav-header %}
             <li class="navigation-menu-item">
-              <a href="{{navItem.url}}/" {% if page.url contains navItem.url %}class="active"{% endif %}>{{navItem.title}}</a>
+              <a href="{% if navItem.url contains '://' %}{{navItem.url}}{% else %}{{site.baseurl}}{{navItem.url}}{% endif %}" {% if page.url contains navItem.url %}class="active"{% endif %}>{{navItem.title}}</a>
             </li>
         {% endfor %}
       </ul>
@@ -29,12 +29,12 @@
       <ul class="navigation-menu">
         {% for navItem in site.data.doc-nav-header %}
             <li class="navigation-menu-item">
-              <a href="{{navItem.url}}" id="{{ navItem.title | downcase | strip }}" {% if page.url contains navItem.url %}class="active"{% endif %}>{{navItem.title}}</a>
+              <a href="{% if navItem.url contains '://' or navItem.url == '#'  %}{{navItem.url}}{% else %}{{site.baseurl}}{{navItem.url}}{% endif %}" id="{{ navItem.title | downcase | strip }}" {% if page.url contains navItem.url %}class="active"{% endif %}>{{navItem.title}}</a>
                 {% if navItem.submenu %}
                 <ul class="navigation-dropdown">
                 {% for subItem in navItem.submenu %}
                   <li>
-                    <a href="{{ subItem.url }}">{{ subItem.title }}</a>
+                    <a href="{% if subItem.url contains '://' %}{{ subItem.url }}{% else %}{{ site.baseurl }}{{ subItem.url }}{% endif %}">{{ subItem.title }}</a>
                   </li>
                 {% endfor %}
                 </ul>
@@ -49,7 +49,7 @@
           <ul class="navigation-submenu" id="{{ navItem.title | downcase | strip }}" style="display: none;">
             {% for subItem in navItem.submenu %}
               <li>
-                <a href="{{ subItem.url }}">{{ subItem.title }}</a>
+                <a href="{% if subItem.url contains '://' %}{{subItem.url}}{% else %}{{site.baseurl}}{{subItem.url}}{% endif %}">{{ subItem.title }}</a>
               </li>
             {% endfor %}
           </ul>
@@ -58,7 +58,7 @@
       <ul class="navigation-submenu ellipsis-menu" style="display: none;">
         {% for navItem in site.data.doc-nav-header %}
           {% if forloop.index > 3 %}
-            <li><a href="{{ navItem.url }}">{{ navItem.title }}</a></li>
+            <li><a href="{% if navItem.url contains '://' %}{{navItem.url}}{% else %}{{site.baseurl}}{{navItem.url}}{% endif %}">{{ navItem.title }}</a></li>
           {% endif %}
         {% endfor %}
       </ul>
