--- a/_includes/sidebar-toc-tour-overview.html
+++ b/_includes/sidebar-toc-tour-overview.html
@@ -33,7 +33,7 @@
         </ul>
       {% elsif site.data.translations.tour.languages != empty  %}
         <ul id="available-languages" style="display: none;">
-          <li><a href="{{ page.url }}">English</a></li>
+          <li><a href="{{ site.baseurl }}{{ page.url }}">English</a></li>
           {% for l in site.data.translations.tour.languages %}
             {% capture intermediate %}{{ page.url | remove_first: l }}{% endcapture %}
             {% capture rootTutorialURL %}{{ intermediate | remove_first: '/' }}{% endcapture %}
