fix "next" and "previous" links in tour
fixes #977

--- a/_layouts/tour.html
+++ b/_layouts/tour.html
@@ -12,12 +12,12 @@ includeCollectionTOC: true
 
                 <div class="two-columns">
                     {% if page.previous-page %}
-                    <a href="{{page.previous-page}}">&larr; <strong>previous</strong></a>
+                    <a href="{{page.previous-page}}.html">&larr; <strong>previous</strong></a>
                     {% else %}
                     <div></div>
                     {% endif %}
                     {% if page.next-page %}
-                    <a href="{{page.next-page}}"><strong>next</strong> &rarr;</a>
+                    <a href="{{page.next-page}}.html"><strong>next</strong> &rarr;</a>
                     {% endif %}
                 </div>
             </div>
