Added Scroll to top button.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,7 +15,10 @@
         <img src="{{ site.baseurl }}/resources/img/frontpage/scala-logo-white.png" alt="">
       </div>
     </div>
-  </footer>
+    <a class="back-to-top in" href="#" id="scroll-to-top-btn">
+      <i class="fa fa-angle-up"></i>
+    </a>
+</footer>
 
 <!-- jquery -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
