--- a/_sass/layout/documentation.scss
+++ b/_sass/layout/documentation.scss
@@ -25,7 +25,7 @@
         text-transform: uppercase;
         font-weight: $font-black;
         font-size: 20px;
-        color: darken(#53b6d3, 15%);
+        color: #0F313B;
       }
 
       h1 {
