More descriptive SIP channel link title

--- a/_layouts/sips.html
+++ b/_layouts/sips.html
@@ -31,7 +31,7 @@ layout: inner-page-parent-dropdown
           <div id="meeting-minutes">
             <ul>
               <li><a href="{{ site.baseurl }}/sips/minutes-list.html">Meeting Minutes</a></li>
-              <li><a href="https://www.youtube.com/channel/UCn_8OeZlf5S6sqCqntAvaIw/videos?view=2&sort=dd&shelf_id=1&live_view=502">All Upcoming SIP Meetings</a></li>
+              <li><a href="https://www.youtube.com/channel/UCn_8OeZlf5S6sqCqntAvaIw/videos?view=2&sort=dd&shelf_id=1&live_view=502">Meeting Video Registrations (Youtube)</a></li>
             </ul>
           </div>
         </div>
