Add Algolia search for documentation. Need test in prod.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -95,6 +95,17 @@ $(document).ready(function() {
 });
 </script>
 {% endif %}
+
+<!-- Alogolia search for doc -->
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.js"></script>
+<script type="text/javascript"> docsearch({
+apiKey: 'fbc439670f5d4e3730cdcb715c359391',
+indexName: 'scala-lang',
+inputSelector: '#doc-search-bar',
+algoliaOptions: { 'facetFilters': ["language:en"] },
+debug: false // Set debug to true if you want to inspect the dropdown
+});
+</script>
 </body>
 
 </html>
