Added contributors widget

--- a/_layouts/tour.html
+++ b/_layouts/tour.html
@@ -20,6 +20,11 @@ includeCollectionTOC: true
                     <a href="{{page.next-page}}.html"><strong>next</strong> &rarr;</a>
                     {% endif %}
                 </div>
+
+                <div class="content-contributors">
+                    <h3>Contributors to this page:</h3>
+                    <div id="contributors" class="contributors-container"></div>
+                </div>
             </div>
 		</div>
 
