Refactor widget to separate file. Added it to more pages

--- a/_includes/inner-page-main-content.html
+++ b/_includes/inner-page-main-content.html
@@ -3,6 +3,8 @@
 		<div class="content-primary">
 			<div class="inner-box">
 				{{content}}
+
+				{% include contributors-list.html %}
 			</div>
 		</div>
 
