--- a/_layouts/cheatsheet.html
+++ b/_layouts/cheatsheet.html
@@ -30,6 +30,8 @@ layout: inner-page-parent-dropdown
             {% endfor %}
           </ul>
         {% endif %}
+
+        {% include contributors-list.html %}
 			</div>
 		</div>
 	</div>
