--- a/_layouts/multipage-overview.html
+++ b/_layouts/multipage-overview.html
@@ -9,6 +9,8 @@ includeCollectionTOC: true
 		<div class="content-primary documentation">
 			<div class="inner-box">
 				{{content}}
+
+				{% include contributors-list.html %}
 			</div>
 		</div>
 
