--- a/_layouts/singlepage-overview.html
+++ b/_layouts/singlepage-overview.html
@@ -8,6 +8,8 @@ includeTOC: true
 		<div class="content-primary documentation">
 			<div class="inner-box">
 				{{content}}
+
+				{% include contributors-list.html %}
 			</div>
 		</div>
 
