--- a/_layouts/tour.html
+++ b/_layouts/tour.html
@@ -21,10 +21,7 @@ includeCollectionTOC: true
                     {% endif %}
                 </div>
 
-                <div class="content-contributors">
-                    <h3>Contributors to this page:</h3>
-                    <div id="contributors" class="contributors-container"></div>
-                </div>
+                {% include contributors-list.html %}
             </div>
 		</div>
 
