--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -54,7 +54,8 @@
 @import 'layout/books';
 @import 'layout/training-events';
 @import 'layout/blog';
-@import 'layout/download'; // COMPONENTS
+@import 'layout/download';
+@import 'layout/content-contributors'; // COMPONENTS
 //------------------------------------------------
 //------------------------------------------------
 @import 'components/buttons';
