--- a/_layouts/style-guide.html
+++ b/_layouts/style-guide.html
@@ -9,6 +9,8 @@ includeTOC: true
 		<div class="content-primary documentation style-guide">
 			<div class="inner-box">
 				{{content}}
+
+				{% include contributors-list.html %}
 			</div>
 		</div>
 
