Added contributors widget (#1098)
Fixes #44 

Following [this answer](https://stackoverflow.com/a/19200303/4496364) I managed to get this via Github API:

![](https://upload.cc/i1/2018/07/04/n4zkhJ.png)

I roughly followed Mozilla's [docs page](https://developer.mozilla.org/en-US/docs/Web/HTML) design and their contributors listing.
Some users don't have the "author" field. Probably deleted their profile?  
So, the fallback is `commit.commit.committer.name` which is, I suppose, always present because of Git...  

Also, if the author isn't present, image icon is generated with https://github.com/identicons. Example here is Ghildiyal user.

Currently, I added this to tour only. IDK did you guys intend to put these on each page?  
If so, there could be some problems with getting page URL from Github. IDK if all of them follow same pattern as "tours"..

--- a/_layouts/tour.html
+++ b/_layouts/tour.html
@@ -20,6 +20,8 @@ includeCollectionTOC: true
                     <a href="{{page.next-page}}.html"><strong>next</strong> &rarr;</a>
                     {% endif %}
                 </div>
+
+                {% include contributors-list.html %}
             </div>
 		</div>
 
