--- a/_sass/components/search.scss
+++ b/_sass/components/search.scss
@@ -6,6 +6,10 @@
     position: relative;
     margin-top: 20px;
     margin-bottom: 20px;
+    
+    .algolia-autocomplete {
+        width: 100%;
+    }
 
     @media screen and (min-width: 768px) {
         margin: 0;
