Add Algolia search for documentation. Need test in prod. (#1096)
* Add Algolia search for documentation. Need test in prod.

* add full width on mobile screen

--- a/_sass/components/search.scss
+++ b/_sass/components/search.scss
@@ -4,7 +4,19 @@
 
 .search-container {
     position: relative;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    
+    .algolia-autocomplete {
+        width: 100%;
+    }
 
+    @media screen and (min-width: 768px) {
+        margin: 0;
+        margin-top: -20px;
+        float: right;
+        width: 24%;
+    }
     .icon-search {
         position: absolute;
         left: 14px;
