--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,7 +21,8 @@
 </footer>
 
 <!-- jquery -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
+<script>(window.jQuery) || document.write('<script src="{{ site.baseurl }}/scripts/jquery-3.1.1.min.js"><\/script>');</script>
 <script src="{{ site.baseurl }}/resources/js/vendor/jquery.autocomplete.js" type="text/javascript"></script>
 
 <!-- moment js -->
