--- a/_layouts/sips.html
+++ b/_layouts/sips.html
@@ -17,7 +17,7 @@ layout: inner-page-parent-dropdown
           <div style="text-align: center; margin-bottom: 24px;">
             <a href="{{ site.baseurl }}/sips/all.html" class="button">View all SIPs</a>
           </div>
-        <h5 class="contents" style="margin-bottom: 0;">SIP Meetings</h5>
+        <h5 class="contents" style="margin-bottom: 0;">SIP/SPP Meetings</h5>
         <div id="sip-meetings">
           <div id="upcoming-meeting">
             <h6>Next meeting:</h6>
