Used toc-context class to identify where toc should look for headings

--- a/_includes/inner-page-main-content.html
+++ b/_includes/inner-page-main-content.html
@@ -2,7 +2,9 @@
 	<div class="wrap">
 		<div class="content-primary">
 			<div class="inner-box">
-				{{content}}
+				<div class="toc-context">
+					{{content}}
+				</div>
 
 				{% include contributors-list.html %}
 			</div>
