--- a/_layouts/overviews.html
+++ b/_layouts/overviews.html
@@ -5,7 +5,7 @@ layout: inner-page-parent
 <section class="full-width">
 	<div class="wrap">
 		<div class="content-primary overviews">
-			<div class="inner-box">
+			<div class="inner-box toc-context">
 				{{content}}
 			</div>
 		</div>
