--- a/_layouts/singlepage-overview.html
+++ b/_layouts/singlepage-overview.html
@@ -7,7 +7,9 @@ includeTOC: true
 	<div class="wrap">
 		<div class="content-primary documentation">
 			<div class="inner-box">
-				{{content}}
+				<div class="toc-context">
+					{{content}}
+				</div>
 
 				{% include contributors-list.html %}
 			</div>
