--- a/_layouts/sip.html
+++ b/_layouts/sip.html
@@ -6,7 +6,7 @@ includeTOC: true
 <section class="content">
 	<div class="wrap">
 		<div class="content-primary documentation">
-			<div class="inner-box">
+			<div class="inner-box toc-context">
 				{{content}}
 			</div>
 		</div>
