--- a/_layouts/sips.html
+++ b/_layouts/sips.html
@@ -5,7 +5,7 @@ layout: inner-page-parent-dropdown
 <section class="content">
 	<div class="wrap">
 		<div class="content-primary sips">
-			<div class="inner-box">
+			<div class="inner-box toc-context">
 				{{content}}
 			</div>
 		</div>
