--- a/_layouts/style-guide.html
+++ b/_layouts/style-guide.html
@@ -8,7 +8,9 @@ includeTOC: true
 	<div class="wrap">
 		<div class="content-primary documentation style-guide">
 			<div class="inner-box">
-				{{content}}
+				<div class="toc-context">
+					{{content}}
+				</div>
 
 				{% include contributors-list.html %}
 			</div>
