--- a/_layouts/tour.html
+++ b/_layouts/tour.html
@@ -8,7 +8,9 @@ includeCollectionTOC: true
 	<div class="wrap">
 		<div class="content-primary documentation">
 			<div class="inner-box">
-				{{content}}
+                <div class="toc-context">
+                    {{content}}
+                </div>
 
                 <div class="two-columns">
                     {% if page.previous-page %}
