Resolve duplicate id attribute value

--- a/_includes/glossary-header.html
+++ b/_includes/glossary-header.html
@@ -75,9 +75,9 @@
     <script type="text/javascript">
   	  $(window).load(function(){
 
-		  $('#filter').focus();
+		  $('#filter-glossary-terms').focus();
 
-	      $("#filter").keydown(function(){
+	      $("#filter-glossary-terms").keydown(function(){
 
 	          // Retrieve the input field text and reset the count to zero
 	          var filter = $(this).val(), count = 0;
