Limit the maximum height of the TOC
The sidebar containing the TOC should not exceed the viewport in order to be useful to quickly navigate on the current page.

--- a/_sass/layout/toc.scss
+++ b/_sass/layout/toc.scss
@@ -12,6 +12,15 @@
   }
 }
 
+.inner-toc {
+  max-height: 60vh;
+  overflow-y: auto;
+
+  @include bp(large) {
+    max-height: none;
+  }
+}
+
 #toc {
   ul {
     list-style: none;
