--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -53,7 +53,7 @@
 <!-- Blog search -->
 <script src="{{ site.baseurl }}/resources/js/vendor/jekyll.search.min.js" type="text/javascript"></script>
 
-<!-- Custom javascript -->
+<!-- Custom JavaScript -->
 <script src="{{ site.baseurl }}/resources/js/functions.js" type="text/javascript"></script>
 
 {% if page.layout == "sips"%}
