--- a/_layouts/glossary.html
+++ b/_layouts/glossary.html
@@ -10,7 +10,27 @@ includeTOC: true
 				<div class="toc-context">
 					{{content}}
 				</div>
-
+				{% if page.languages %}
+				<ul id="available-languages" style="display: none;">
+					<li><a href="{{ site.baseurl }}{{ page.url }}">English</a></li>
+					{% for l in page.languages %}
+					{% capture intermediate %}{{ page.url | remove_first: l }}{% endcapture %}
+					{% capture rootTutorialURL %}{{ intermediate | remove_first: '/' }}{% endcapture %}
+					{% assign lang = site.data.languages[l] %}
+					<li><a href="{{ site.baseurl }}/{{ l }}/{{ rootTutorialURL }}" class="lang">{{ lang.name }}</a></li>
+					{% endfor %}
+				</ul>
+				{% elsif page.language %}
+				{% assign engPath = page.id | remove_first: "/" | remove_first: page.language | append: '.html' %}
+				{% assign engPg = site.glossary | first %}
+				<ul id="available-languages" style="display: none;">
+					<li><a href="{{ site.baseurl }}{{ engPath }}">English</a></li>
+					{% for l in engPg.languages %}
+					{% assign lang = site.data.languages[l] %}
+					<li><a href="{{ site.baseurl }}/{{ l }}{{ engPath }}" class="lang">{{ lang.name }}</a></li>
+					{% endfor %}
+				</ul>
+				{% endif %}
 				{% include contributors-list.html %}
 			</div>
 		</div>
