--- a/_layouts/cheatsheet.html
+++ b/_layouts/cheatsheet.html
@@ -14,7 +14,7 @@ layout: inner-page-parent-dropdown
           <ul id="available-languages" style="display: none;">
             <li><a href="{{site.baseurl}}{{ page.url }}">English</a></li>
             {% for l in page.languages %}
-              {% capture intermediate %}{{ page.url | remove_first: l }}{% endcapture %}
+              {% capture intermediate %}{{ page.url }}{% endcapture %}
               {% capture rootTutorialURL %}{{ intermediate | remove_first: '/' }}{% endcapture %}
         			{% assign lang = site.data.languages[l] %}
         			<li><a href="{{ site.baseurl }}/{{ l }}/{{ rootTutorialURL }}" class="lang">{{ lang.name }}</a></li>
