--- a/_sass/layout/toc.scss
+++ b/_sass/layout/toc.scss
@@ -69,6 +69,10 @@
           margin-bottom: 0;
           margin-top: 0;
           line-height: 1.2;
+
+          ul {
+                margin-top: 1px;
+          }
         }
       }
     }
