--- a/_layouts/multipage-overview.html
+++ b/_layouts/multipage-overview.html
@@ -12,6 +12,17 @@ includeCollectionTOC: true
 					{{content}}
 				</div>
 
+				<div class="two-columns">
+					{% if page.previous-page %}
+					<a href="{{page.previous-page}}.html">&larr; <strong>previous</strong></a>
+					{% else %}
+					<div></div>
+					{% endif %}
+					{% if page.next-page %}
+					<a href="{{page.next-page}}.html"><strong>next</strong> &rarr;</a>
+					{% endif %}
+				</div>
+
 				{% include contributors-list.html %}
 			</div>
 		</div>
