Add newer version notice

--- a/_layouts/inner-page-parent-dropdown.html
+++ b/_layouts/inner-page-parent-dropdown.html
@@ -1,5 +1,6 @@
 {% include headertop.html %}
 {% include headerbottom.html %}
+{% if page.new-version %}<a class="new-version-notice" href="{{ page.new-version }}">This page has a new version.</a>{% endif %}
 
 <div class="navigation-fade-screen"></div>
 
