--- a/_layouts/inner-page-parent.html
+++ b/_layouts/inner-page-parent.html
@@ -1,4 +1,5 @@
  {% include headertop.html %} {% include headerbottom.html %}
+ {% if page.new-version %}<a class="new-version-notice" href="{{ page.new-version }}">This page has a new version.</a>{% endif %}
 
 <div class="navigation-fade-screen"></div>
 
@@ -20,7 +21,6 @@
 					<ul class="result-container" id="result-container" style="display: none;"></ul>
 				</div>
 			</div>
-
 		</div>
 	</section>
 
